fixing dark mode and login form.html

--- a/static/cadastro_receita.css
+++ b/static/cadastro_receita.css
@@ -160,6 +160,10 @@ svg {
 }
 
 
+.form-check-label{
+    font-size: 0.8rem;
+}
+
 
 .container {
     max-width: 900px;
